force-app/main/default/objects/Saved_Request__c/Saved_Request__c.object-meta.xml
<CustomObject>
    <description>To store the request set</description>
    <label>Saved Request</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Saved Requests Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Saved Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>