force-app/main/default/objects/Saved_Request__c/fields/Asynchronous_Run__c.field-meta.xml
<CustomField>
    <fullName>Asynchronous_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will make an asynchrounous api request depending on the scheduler configuration at a specified time.</description>
    <inlineHelpText>Check this box to include the api request in the Asynchronous run.</inlineHelpText>
    <label>Asynchronous Run</label>
    <type>Checkbox</type>
</CustomField>