force-app/main/default/objects/Saved_Request__c/fields/Header_Information__c.field-meta.xml
<CustomField>
    <fullName>Header_Information__c</fullName>
    <label>Header Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>