force-app/main/default/objects/Saved_Request__c/fields/Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Method_Type__c</fullName>
    <label>Method Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
                <default>true</default>
                <label>GET</label>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>