force-app/main/default/objects/Saved_Request__c/fields/Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Request_Name__c</fullName>
    <description>Holds unique Name of the request</description>
    <externalId>true</externalId>
    <label>Request Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>