force-app/main/default/objects/Saved_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Request_Name__c</columns>
    <columns>NAME</columns>
    <columns>Method_Type__c</columns>
    <columns>Asynchronous_Run__c</columns>
    <columns>URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>